--- a/browser/src/App.css
+++ b/browser/src/App.css
@@ -6,9 +6,11 @@
     width:400px;
 }
 
+/* 
 nav{
     background: lightgreen;
-}
+} 
+*/
 
 .naviList{
     list-style-type: none;
@@ -29,4 +31,6 @@ nav{
     font-weight:bold;
     font-size:medium;
 }
+
+
 
