(1)server side: implement  delete /joke API (2)browser side: implement delete joke function in component MyCreatedPost.jsx and page MyJokes.jsx

--- a/browser/src/App.css
+++ b/browser/src/App.css
@@ -36,3 +36,17 @@ nav{
 .bookmarkIcon {
     font-size: 2em;
 }
+
+.trashIcon {
+    font-size: 2em;
+}
+
+.trashButton {
+    padding: .25rem;
+    
+}
+
+.trashButton:hover {
+    background-color: gray;
+    color:white;
+}
