browser implement page navigation in Home page

--- a/browser/src/App.css
+++ b/browser/src/App.css
@@ -37,6 +37,10 @@ nav{
     font-size: 2em;
 }
 
+.bookmarkIcon:hover {
+    background-color: lightgray;
+}
+
 .trashIcon {
     font-size: 2em;
 }
